# NONG-Replace

./: .gitmodules  README.md
client/: CMakeLists.txt
client/src/: HackProButton.h  dllmain.cpp  includes.h
client/src/hook/: NONGHook.cpp  NONGHook.h
server/: Cargo.toml
server/src/: main.rs
server/src/utils/: sql.rs
